# ocvcoin

./: .appveyor.yml  .cirrus.yml  .fuzzbuzz.yml  .gitignore  .travis.yml  CNAME  CODEOWNERS  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  REVIEWERS  SECURITY.md  UBUNTU18_INSTALLER.sh  UBUNTU_AUTO_BUILD_AND_INSTALL.sh  UBUNTU_AUTO_BUILD_AND_PACK_WINDOWS_SETUP.sh  autogen.sh  configure.ac  libocvcoinconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  config.yml  good_first_issue.md  good_first_issue.yml  (+2 more)
.tx/: config
build_msvc/: .gitignore  README.md  libsecp256k1_config.h  msvc-autogen.py  ocvcoin.sln  ocvcoin_config.h  ocvcoin_config.h.in  vcpkg.json
ci/: lint_imagefile  lint_run_all.sh  test_run_all.sh
contrib/: README.md  filter-lcov.py  gitian-build.py  install_db4.sh  ocvcoin-cli.bash-completion  ocvcoin-qt.pro  ocvcoin-tx.bash-completion  ocvcoind.bash-completion  valgrind.supp
contrib/devtools/ocvcoin-tidy/: CMakeLists.txt  README  example_logprintf.cpp  logprintf.cpp  logprintf.h  ocvcoin-tidy.cpp
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-android.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  gitian-building.md  guix.md  i2p.md  init.md  managing-wallets.md  multiprocess.md  multisig-tutorial.md  ocvcoin-conf.md  p2p-bad-ports.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  (+5 more)
doc/man/: Makefile.am  ocvcoin-cli.1  ocvcoin-qt.1  ocvcoin-tx.1  ocvcoin-util.1  ocvcoin-wallet.1  ocvcoind.1
share/: genbuild.sh  setup.nsi.in
src/: .clang-tidy  Makefile.am  Makefile.bench.include  Makefile.crc32c.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.cpp  addrdb.h  addresstype.h  addrman.cpp  addrman.h  addrman_impl.h  amount.h  arith_uint256.cpp  arith_uint256.h  attributes.h  banman.cpp  banman.h  base58.cpp  base58.h  bech32.h  bip324.cpp  bip324.h  blockencodings.cpp  blockencodings.h  blockfilter.cpp  blockfilter.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  (+139 more)
test/: README.md  config.ini.in  get_previous_releases.py
(+1547 files in other folders)
