dist_man1_MANS=

if BUILD_OCVCOIND
  dist_man1_MANS+=ocvcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=ocvcoin-qt.1
endif

if BUILD_OCVCOIN_CLI
  dist_man1_MANS+=ocvcoin-cli.1
endif

if BUILD_OCVCOIN_TX
  dist_man1_MANS+=ocvcoin-tx.1
endif

if BUILD_OCVCOIN_UTIL
  dist_man1_MANS+=ocvcoin-util.1
endif

if ENABLE_WALLET
if BUILD_OCVCOIN_WALLET
  dist_man1_MANS+=ocvcoin-wallet.1
endif
endif
